[package]
name = "book-check"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
reqwest = { version = "0.11", features = ["json"] }
term = "0.7"
tokio = { version = "1", features = ["full"] }
url = "2"